# fastvarint

./: Cargo.toml  fk
src/: impls.rs  lib.rs  nonmax.rs  serde.rs  tests.rs  traits.rs  varint.rs
