[package]
name = "fastvarint"
version = "0.13.0"
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
description = "fast varint encode/decode that supports wide compatibility"
repository = "https://github.com/Bruce0203/fastvarint"
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }
num-traits = "0.2.19"
serde = { version = "1.0.209", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]

